# hLLM

./: .fix-style.ch  .gitignore  .gitlab-ci.yml  .gitmodules  README.md  meson.build  meson_options.txt
.build-tools/containers/: README.md  build.sh  deploy.sh  remove.sh  run.sh
.build-tools/containers/buildenv/: Dockerfile  run.sh
.build-tools/style/: check-style.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature-request.md
.github/workflows/: deployr.yml  master-test-workflow.yml  master.yml  pr-development-workflow.yml  pr-development.yml  style.yml
docs/: .gitignore  Doxyfile  Makefile
docs/source/: .gitignore  conf.py  index.rst
examples/: meson.build
examples/basic/: basic.cpp  basic.hpp  basic.py  cloudr.cpp  cloudr.json  config copy.json  config.json  meson.build  mpi.cpp  policy.json  requester.hpp  test.json  test.py
examples/helloworld/: config.json  helloworld.cpp  helloworld.py  meson.build
examples/sendrecv/: config.json  meson.build  sendrecv.cpp  sendrecv.py
examples/serving/: CMakeLists.txt  attention.hpp  attention_example.cpp  attention_example.py  config.json  meson.build  mpi.cpp  requester.hpp  serving.hpp
include/hllm/: channel.hpp  channelCreationImpl.hpp  coordinator.hpp  engine.hpp  parseConfigImpl.hpp  partition.hpp  partitionCoordinator.hpp  prompt.hpp  realTimeAnalysis.hpp  replica.hpp  request.hpp  role.hpp  session.hpp  task.hpp
include/hllm/channels/: consumer.hpp  definitions.hpp  producer.hpp
include/hllm/configuration/: channel.hpp  deployment.hpp  edge.hpp  partition.hpp  replica.hpp  requestManager.hpp  task.hpp
include/hllm/coordinator/: coordinator.hpp  replica.hpp
include/hllm/edge/: base.hpp  input.hpp  message.hpp  output.hpp
include/hllm/messages/: base.hpp  data.hpp  heartbeat.hpp  heartbeatPing.hpp  prompt.hpp  replicaReady.hpp  userInput.hpp
include/hllm/replica/: replica.hpp  task.hpp
include/hllm/roles/: requestManager.hpp
include/hllm/roles/partition/: base.hpp  coordinator.hpp  replica.hpp
include/llm-engine/: llm-engine.hpp  task.hpp
include/pyLLM/: README.md  meson.build  pyLLM.cpp
tests/: meson.build
